Add start up instructions and assumption to read me